Update CV and about me.

--- a/index.html
+++ b/index.html
@@ -132,11 +132,17 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
-		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
-		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I am a postdoctoral researcher in <a href="https://www.pks.mpg.de/nqd" target="_blank">Marin Bukov's group</a> at the <a href="https://www.pks.mpg.de/" target="_blank">Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.
+		I received my PhD in physics from <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in 2023.
+	</p>
+	
+	<p>
+		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
+		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
+		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
+		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+
+		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -146,8 +152,11 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
-			<dt class="col-lg-2 col-sm-3">2019 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland. Associated PhD Student at University of Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+		
+			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
@@ -166,15 +175,15 @@
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
 		2021: Mechanics of Continua (ETH Zurich)<br>
-                2022: Solid State Theory (ETH Zurich)
+        2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I'm a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I'm also an active juror at our national tournaments.
+		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
@@ -259,11 +268,17 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
-		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
-		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I am a postdoctoral researcher in <a href="https://www.pks.mpg.de/nqd" target="_blank">Marin Bukov's group</a> at the <a href="https://www.pks.mpg.de/" target="_blank">Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.
+		I received my PhD in physics from <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in 2023.
+	</p>
+	
+	<p>
+		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
+		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
+		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
+		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+
+		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -273,8 +288,11 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
-			<dt class="col-lg-2 col-sm-3">2019 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland. Associated PhD Student at University of Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+		
+			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
@@ -293,15 +311,15 @@
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
 		2021: Mechanics of Continua (ETH Zurich)<br>
-                2022: Solid State Theory (ETH Zurich)
+        2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I'm a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I'm also an active juror at our national tournaments.
+		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
@@ -382,11 +400,17 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
-		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
-		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I am a postdoctoral researcher in <a href="https://www.pks.mpg.de/nqd" target="_blank">Marin Bukov's group</a> at the <a href="https://www.pks.mpg.de/" target="_blank">Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.
+		I received my PhD in physics from <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in 2023.
+	</p>
+	
+	<p>
+		Currently, I study so-called hyperbolic lattices, the analogue of periodic structures in the space of constant negative curvature.
+		Recent experiments with metamaterials have shown that hyperbolic lattices enable simulations of the negatively curved hyperbolic space.
+		But the lattices themselves also constitute a largely unexplored territory, and their quantum mechanics presents unique challenges on account of the curvature-induced noncommutativity of hyperbolic translations.
+		I study various aspects of hyperbolic lattices, including fundamental questions about their band theory, topology, and quantum many-body physics.
+
+		Additionally, I am interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -396,8 +420,11 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
-			<dt class="col-lg-2 col-sm-3">2019 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland. Associated PhD Student at University of Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+		
+			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
@@ -416,15 +443,15 @@
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
 		2021: Mechanics of Continua (ETH Zurich)<br>
-                2022: Solid State Theory (ETH Zurich)
+        2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
 	<em>Swiss Young Physicist's Tournament</em>
 	<p>
-		I'm a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
+		I am a board member in the association Pro IYPT-CH that organizes the Swiss version of the <a href="http://www.iypt.org" target="_blank">International Young Physicist's Tournament (IYPT)</a>, a high-school physics competition, and prepares students for the international tournament.
 		Previously, I have also mentored students in this competition and have participated as a juror at the IYPT.
-		Currently, I'm also an active juror at our national tournaments.
+		Currently, I am also an active juror at our national tournaments.
 		For more information, please visit <a href="https://www.sypt.ch" target="_blank">www.sypt.ch</a>.
 	</p>
 </div>
