Update CV and supercell paper.

--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
+		
 			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral fellow at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
@@ -182,21 +183,49 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
+		
 	</dl>
 
-	<h3 class="my-2">Teaching</h3>
+	<h4 class="my-2">Selected Prizes and Awards</h4>
+	<ul>
+		
+		
+			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
+		
+			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
+		
+			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
+		
+			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
+		
+	</ul>
+
+	<h4 class="my-2">Teaching/Supervision</h4>
+	<em>Students</em>
+	<ul>
+		
+		
+			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+		
+	</ul>
+
 	<em>Tutorials</em>
 	<p>
-		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)<br>
-        2022: Solid State Theory (ETH Zurich)
+		
+		
+			2022: Solid State Theory (ETH Zurich)<br>
+		
+			2021: Mechanics of Continua (ETH Zurich)<br>
+		
+			2020: Solid State Theory (ETH Zurich)<br>
+		
+			2018: Theory of Heat (ETH Zurich)<br>
+		
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -329,8 +358,9 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
+		
 			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral fellow at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
@@ -338,21 +368,49 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
+		
 	</dl>
 
-	<h3 class="my-2">Teaching</h3>
+	<h4 class="my-2">Selected Prizes and Awards</h4>
+	<ul>
+		
+		
+			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
+		
+			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
+		
+			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
+		
+			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
+		
+	</ul>
+
+	<h4 class="my-2">Teaching/Supervision</h4>
+	<em>Students</em>
+	<ul>
+		
+		
+			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+		
+	</ul>
+
 	<em>Tutorials</em>
 	<p>
-		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)<br>
-        2022: Solid State Theory (ETH Zurich)
+		
+		
+			2022: Solid State Theory (ETH Zurich)<br>
+		
+			2021: Mechanics of Continua (ETH Zurich)<br>
+		
+			2020: Solid State Theory (ETH Zurich)<br>
+		
+			2018: Theory of Heat (ETH Zurich)<br>
+		
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -481,8 +539,9 @@
 	<h3 class="my-2">Short CV</h3>
 	<dl class="row no-gutters">
 		
+		
 			<dt class="col-lg-2 col-sm-3">2023 - present</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral researcher at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Postdoctoral fellow at the <a href='https://www.pks.mpg.de/' target='_blank'>Max Planck Institute for the Physics of Complex Systems</a> in Dresden, Germany.</div></dd>
 		
 			<dt class="col-lg-2 col-sm-3">2019 - 2023</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">PhD in Condensed Matter Theory, ETH Zurich / Paul Scherrer Institute (PSI), Switzerland supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a>. Associated PhD Student at University of Zurich, Switzerland</div></dd>
@@ -490,21 +549,49 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
+		
 	</dl>
 
-	<h3 class="my-2">Teaching</h3>
+	<h4 class="my-2">Selected Prizes and Awards</h4>
+	<ul>
+		
+		
+			<li>ETH Silver Medal for outstanding PhD thesis (2023)</li>
+		
+			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
+		
+			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
+		
+			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
+		
+	</ul>
+
+	<h4 class="my-2">Teaching/Supervision</h4>
+	<em>Students</em>
+	<ul>
+		
+		
+			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+		
+	</ul>
+
 	<em>Tutorials</em>
 	<p>
-		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)<br>
-        2022: Solid State Theory (ETH Zurich)
+		
+		
+			2022: Solid State Theory (ETH Zurich)<br>
+		
+			2021: Mechanics of Continua (ETH Zurich)<br>
+		
+			2020: Solid State Theory (ETH Zurich)<br>
+		
+			2018: Theory of Heat (ETH Zurich)<br>
+		
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -523,7 +610,7 @@
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 copyright-text">Copyright &copy; 2023 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
+		<p class="m-0 copyright-text">Copyright &copy; 2024 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
 	</div>
 </footer>
 
