Add PDF CV, update info.

--- a/index.html
+++ b/index.html
@@ -183,13 +183,12 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
 	</dl>
+
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
@@ -200,8 +199,6 @@
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
 		
 			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
-		
-			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
 		
 	</ul>
 
@@ -368,13 +365,12 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
 	</dl>
+
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
@@ -385,8 +381,6 @@
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
 		
 			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
-		
-			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
 		
 	</ul>
 
@@ -549,13 +543,12 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
-		
 			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
 	</dl>
+
+	<a href="/assets/misc/LenggenhagerPatrickM_CV.pdf" class="btn btn-primary btn-sm mb-4" target="_blank"><span class="">Download full CV</span></a>
 
 	<h4 class="my-2">Selected Prizes and Awards</h4>
 	<ul>
@@ -566,8 +559,6 @@
 			<li>Gold medal at the International Young Physicists' Tournament as a team leader of the Swiss team (2016)</li>
 		
 			<li>Member of the Swiss Study Foundation (2012 - 2021)</li>
-		
-			<li>Best Matura and best Matura project at the Kantonsschule MNG Rämibühl (2012)</li>
 		
 	</ul>
 
