--- a/publications.html
+++ b/publications.html
@@ -146,7 +146,7 @@ Here, we systematically construct non-Abelian Bloch states by generalizing to hy
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://www.research-collection.ethz.ch/handle/20.500.11850/645370" target="_blank">
+	<a href="https://doi.org/10.3929/ethz-b-000645370" target="_blank">
 		Doctoral Thesis ETH Zurich No. 29553 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
@@ -166,7 +166,7 @@ Here, we systematically construct non-Abelian Bloch states by generalizing to hy
 				<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://www.research-collection.ethz.ch/handle/20.500.11850/645370" target="_blank">
+	<a href="https://doi.org/10.3929/ethz-b-000645370" target="_blank">
 		Doctoral Thesis ETH Zurich No. 29553 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
