--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,10 @@
 						<a class="nav-link" href="/publications.html">Publications</a>
 					</li>
 				
+					<li class="nav-item">
+						<a class="nav-link" href="/software.html">Software</a>
+					</li>
+				
 					<li class="nav-item active">
 						<a class="nav-link" href="/contact.html">Contact</a>
 					</li>
