Update students and contact details

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
 	<ul>
 		
 		
-			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+		
+			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
 	</ul>
 
@@ -394,7 +396,9 @@
 	<ul>
 		
 		
-			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+		
+			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
 	</ul>
 
@@ -572,7 +576,9 @@
 	<ul>
 		
 		
-			<li>Marcelo Looser (2023 - 2024): Master student at UZH, co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
+			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+		
+			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
 	</ul>
 
