Update list of students.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	<ul>
 		
 		
-			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+			<li>Benoît Fanton (2024): Master student (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
 		
 			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
@@ -396,7 +396,7 @@
 	<ul>
 		
 		
-			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+			<li>Benoît Fanton (2024): Master student (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
 		
 			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
@@ -576,7 +576,7 @@
 	<ul>
 		
 		
-			<li>Benoît Fanton (2024): Undergraduate intern (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
+			<li>Benoît Fanton (2024): Master student (École Normale Supérieure - PSL, France), co-supervised by <a href='https://www.pks.mpg.de/nqd' target='_blank'>Dr. Marin Bukov</a></li>
 		
 			<li>Marcelo Looser (2023 - 2024): Master student (University of Zurich, Switzerland), co-supervised by <a href='https://www.physik.uzh.ch/en/groups/bzdusek.html' target='_blank'>Prof. Dr. Tomáš Bzdušek</a></li>
 		
