Add tutorial category and git introduction.

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,10 @@
 						<a class="nav-link" href="/software.html">Software</a>
 					</li>
 				
+					<li class="nav-item">
+						<a class="nav-link" href="/tutorials.html">Tutorials</a>
+					</li>
+				
 					<li class="nav-item active">
 						<a class="nav-link" href="/contact.html">Contact</a>
 					</li>
